--- a/templates/register.html
+++ b/templates/register.html
@@ -6,14 +6,18 @@
 
 {% block body %}
     <p>Please enter your name, age and gender bellow:</p>
-    <form action="{{ url_for('register') }}" method="post">
-        <p><input type="text" name="name" placeholder="Your name here:" autofocus></p>
-        <p>Age: <input type="number" name="age" min="1" max="100"></p>
+    <form action="{{ url_for('register') }}" method="post" class="register">
+        <p>Name: <input type="text" name="name" placeholder="ex.: Read Reader Jr."></p>
+        <p>Age: <input type="number" name="age" min="1" max="100" class="age" placeholder="18"></p>
         <p>Gender: <input type="radio" id="female" name="gender" value="female"><label for="female"><i class="fas fa-female"></i> <i class="fas fa-venus"></i></label>  <input type="radio" id="male" name="gender" value="male"><label for="male"><i class="fas fa-male"></i> <i class="fas fa-mars"></i></label> </p>
-        <p>Please choose your username and password. Should be more than 4 symbols and consist of letters and digits only.</p>
-        <p>*Username: <input type="text" name="username" placeholder="4 or more letters and numbers"> <span class="error">{{ username_problem }}</span></p>
-        <p>*Password: <input type="password" name="password_1" placeholder="4 or more letters and numbers"> <span class="error">{{ password_problem }}</span></p>
-        <p>         <input type="password" name="password_2" placeholder="4 or more letters and numbers"></p>
-        <button name="registered" value="True">Register</button>
+        <p>Choose your username and password.</p>
+        <p>Both should be more than 4 symbols long and consist of letters and digits only.</p>
+        <div class="username">
+            <p>Username: <input type="text" name="username" placeholder="ex.: reader1"> <span class="error">{{ username_problem }}</span></p>
+            <p>Password: <input type="password" name="password_1" placeholder="ex.: read1reader" class="password"> <span class="error">{{ password_problem }}</span></p>
+            <p><input type="password" name="password_2" placeholder="re-enter your password" class="second"></p>
+            <button name="registered" value="True">Register</button>
+
+        </div>
     </form>
 {% endblock %}
