--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -5,7 +5,7 @@ $titlecolor: rgb(189, 139, 74);
 
 * {
     border: 0px solid;
-    // border-radius: 1em;
+    border-radius: 1em;
     outline:none;
 }
 
